--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
               <li><a href="#products">Products</a></li>
               <li><a href="#contact">Contact</a></li>
-              <li><a href="#private policy">Private Policy</a></li>
+              <li><a href="#private-policy">Private Policy</a></li>
             </ul>
         </nav>
         <div class="container">
@@ -31,7 +31,7 @@
             <div class="content">
                 <h1>STADIUM</h1>
                 <p>We deliver African soft drinks</p>
-                <a href="#">PURCHASE</a>
+                <a href="#products">PURCHASE</a>
             </div> 
         </div>  
     </header>
@@ -136,10 +136,51 @@
                 </div>
               </div>
         </section>
+        <section id="private-policy" class="policy-section">
+            <h3>Private Policy</h3>
+            <article>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit dolores, odit non 
+        iste vel numquam animi praesentium sed hic culpa iure rerum qui soluta placeat nesciunt nihil est consequuntur odio?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis architecto at deleniti nostrum, 
+        minima quia magni perferendis cupiditate sint, eaque recusandae rerum quas autem commodi nihil, delectus eveniet nisi temporibus.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto consequatur tempore repudiandae? Voluptatem omnis fugit 
+        commodi sunt sequi eveniet quas fuga asperiores corporis dolorem, ipsa beatae delectus perspiciatis nam mollitia?
+                </p>
+                <div learn-more-container>
+                    <a href="#private-policy">Learn more</a>
+                </div>
+            </article> 
+        </section>
     </main>
     <footer>
         <!-- footer content goes here -->
-
+        <div class="contact-container">
+            <div class="line-1">
+                <h4>Reach Us</h4>
+                <ul>
+                    <li>Location: 25th Avenue, Stadium street</li>
+                    <li>Telephone: +233 47590 8474</li>
+                    <li>Email: stadium@gmail.com</li>
+                </ul>
+            </div>
+            <div class="line-2">
+                <h4>All social Media Platforms</h4>
+                <ul>
+                    <li><a href="#">@stadiumafrica</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>About Us</h4>
+                <ul>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#private-policy">Private Policy</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                </ul>
+                </div>
+            </div>
+                
+        </div>
+          
       </footer>
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
