--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
             <div class="content">
                 <h1>STADIUM</h1>
                 <p>We deliver African soft drinks</p>
-                <a href="#products">PURCHASE</a>
+                <a href="#products" onclick="openForm()">PURCHASE</a>
+            </div>
+            <div id="sampleForm" class="popup-form">
+              
+              <form action="action/php" target="_blank" class="form-container">
+                <h3>Order free sample</h3>
+
+                <label for="full-name">Full Name:</label><br>
+                <input type="text" id="full-name" name="full-name" placeholder="Enter Fullname" required><br>
+                <label for="email">Email:</label><br>
+                <input type="text" id="email" name="email" placeholder="Enter Email" required><br><br>
+                <button type="submit" class="submit-btn">Submit</button> <br>
+                <button type="button" class="close-btn" onclick="closeForm()">Continue</button>
+              </form>
             </div> 
         </div>  
     </header>
@@ -60,7 +73,7 @@
                         <div class="card-body">
                           <h4 class="card-title">lemon-cards</h4>
                           <p class="card-text">This is available to countries in Africa. Made with natural lemon ingredients.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <p class="card-text"><small class="text-muted">$21.00</small></p>
                         </div>
                       </div>
                     </div>
@@ -70,7 +83,7 @@
                         <div class="card-body">
                           <h4 class="card-title">infused-water</h4>
                           <p class="card-text">This is available to countries in Africa. Made with natural ingredients infused with water.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <p class="card-text"><small class="text-muted">$20.00</small></p>
                         </div>
                       </div>
                     </div>
@@ -80,7 +93,7 @@
                         <div class="card-body">
                           <h4 class="card-title">smoothie-with-avocado-banana</h4>
                           <p class="card-text">This is available to countries in Africa. Made with natural avocado and banana ingredients.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <p class="card-text"><small class="text-muted">$19.00</small></p>
                         </div>
                       </div>
                     </div>
@@ -90,7 +103,7 @@
                         <div class="card-body">
                           <h4 class="card-title">cucumber-lemon</h4>
                           <p class="card-text">This is available to countries in Africa. Made with natural cucumber and lemon ingredients.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <p class="card-text"><small class="text-muted">$20.00</small></p>
                         </div>
                       </div>
                     </div>
@@ -100,7 +113,7 @@
                         <div class="card-body">
                           <h4 class="card-title">cranberry-vodka-lemon-ice</h4>
                           <p class="card-text">This is available to countries in Africa. Made with natural cranberry vodka and lemon-ice ingredients.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <p class="card-text"><small class="text-muted">$18.00</small></p>
                         </div>
                       </div>
                     </div>
@@ -110,7 +123,7 @@
                         <div class="card-body">
                           <h4 class="card-title">tomatoes-wine</h4>
                           <p class="card-text">This is available to countries in Africa. Made with natural tomatoes ingredients.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <p class="card-text"><small class="text-muted">$19.50</small></p>
                         </div>
                       </div>
                     </div>
@@ -120,7 +133,7 @@
                         <div class="card-body">
                           <h4 class="card-title">fruit-combo</h4>
                           <p class="card-text">This is available to countries in Africa. Made with natural fruits combination ingredients.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <p class="card-text"><small class="text-muted">$18.00</small></p>
                         </div>
                       </div>
                     </div>
@@ -152,7 +165,7 @@
             </article> 
         </section>
     </main>
-    <footer>
+    <footer id="contact">
         <!-- footer content goes here -->
         <div class="contact-container">
             <div class="line-1">
