--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
               <li><a href="#products">Products</a></li>
               <li><a href="#contact">Contact</a></li>
-              <li><a href="#private-policy">Private Policy</a></li>
+              <li><a href="#private-policy">Privacy Policy</a></li>
             </ul>
         </nav>
         <div class="container">
